<resources>
    <string name="app_name">Star Wars Kamino</string>
    <string name="name">Name</string>
    <string name="rotation_period">Rotational Period</string>
    <string name="orbital_period">Orbital Period</string>
    <string name="diameter">Diameter</string>
    <string name="climate">Climate</string>
    <string name="gravity">Gravity</string>
    <string name="terrain">Terrain</string>
    <string name="surface_water">Water Surface</string>
    <string name="population">Population</string>
    <string name="residents">Residents</string>
    <string name="unknown">Unknown</string>
    <string name="planet_name_default">Planet Name</string>
    <string name="show_residents">Show Residents</string>
    <string name="no_residents_data">No residents data</string>
    <string name="resident_id">Resident %1$s</string>
    <string name="mass">Mass:</string>
    <string name="height">Height:</string>
    <string name="resident_image">Resident image</string>
    <string name="gender">Gender:</string>
    <string name="hair_color">Hair color:</string>
    <string name="skin_color">Skin color:</string>
    <string name="birth_year">Birth Year:</string>
    <string name="eye_color">Eye color:</string>
    <string name="no_image_available">No image available</string>
    <string name="resident_details">Resident details</string>
    <string name="description_zoom_touch_close">Touch to close</string>
    <string name="like">Like</string>
    <string name="likes">Likes: %1$d</string>
</resources>
