<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.residentDetails.ResidentDetailsFragment" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/resident_image"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/no_img_available"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/no_image_available"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="image,no_img_available"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier" />

        <TextView
            android:id="@+id/height_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/height"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="right"
            android:text="@string/height"
            app:layout_constraintEnd_toEndOf="@id/name"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/height_title"
            app:layout_constraintTop_toTopOf="@+id/height_title" />

        <TextView
            android:id="@+id/mass_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mass"
            app:layout_constraintStart_toStartOf="@+id/height_title"
            app:layout_constraintTop_toBottomOf="@+id/height_title" />


        <TextView
            android:id="@+id/mass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="right"
            android:text="@string/mass"
            app:layout_constraintEnd_toEndOf="@id/name"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/mass_title"
            app:layout_constraintTop_toTopOf="@+id/mass_title" />


        <TextView
            android:id="@+id/gender_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="@+id/mass_title"
            app:layout_constraintTop_toBottomOf="@+id/mass_title" />


        <TextView
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="right"
            android:text="@string/gender"
            app:layout_constraintEnd_toEndOf="@id/name"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/gender_title"
            app:layout_constraintTop_toTopOf="@+id/gender_title" />

        <TextView
            android:id="@+id/birth_year_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/birth_year"
            app:layout_constraintStart_toStartOf="@+id/gender_title"
            app:layout_constraintTop_toBottomOf="@+id/gender_title" />


        <TextView
            android:id="@+id/birth_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="right"
            android:text="@string/birth_year"
            app:layout_constraintEnd_toEndOf="@id/name"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/birth_year_title"
            app:layout_constraintTop_toTopOf="@+id/birth_year_title" />

        <TextView
            android:id="@+id/hair_color_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hair_color"
            app:layout_constraintStart_toStartOf="@+id/birth_year_title"
            app:layout_constraintTop_toBottomOf="@+id/birth_year_title" />

        <TextView
            android:id="@+id/hair_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="right"
            android:text="@string/hair_color"
            app:layout_constraintEnd_toEndOf="@id/name"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/hair_color_title"
            app:layout_constraintTop_toTopOf="@+id/hair_color_title" />

        <TextView
            android:id="@+id/skin_color_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/skin_color"
            app:layout_constraintStart_toStartOf="@+id/hair_color_title"
            app:layout_constraintTop_toBottomOf="@+id/hair_color_title" />

        <TextView
            android:id="@+id/skin_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="right"
            android:text="@string/skin_color"
            app:layout_constraintEnd_toEndOf="@id/name"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/skin_color_title"
            app:layout_constraintTop_toTopOf="@+id/skin_color_title" />

        <TextView
            android:id="@+id/eye_color_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/eye_color"
            app:layout_constraintStart_toStartOf="@+id/skin_color_title"
            app:layout_constraintTop_toBottomOf="@+id/skin_color_title" />

        <TextView
            android:id="@+id/eye_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="right"
            android:text="@string/eye_color"
            app:layout_constraintEnd_toEndOf="@id/name"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/eye_color_title"
            app:layout_constraintTop_toTopOf="@+id/eye_color_title" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>